# human-emotion-intelligence

./: .env.example  CHANGELOG.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: golden_set.json
docs/: api-gateway.md  api-reference.md  architecture.md  getting-started.md  mcp.md  memory.md  philosophy.md  research-insights-2026.md  roadmap-v0.4.md
examples/: basic_usage.py  memory_example.py
src/hei/: __init__.py  api.py  core.py  emotion.py  evaluation.py  intent.py  mcp_server.py  memory.py  models.py  strategy.py
tests/: conftest.py  test_golden.py  test_memory.py  test_memory_persistent.py  test_models.py  test_validation.py
