[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "human-emotion-intelligence"
version = "0.3.0"
description = "Human Emotion Intelligence (HEI) - Conversation Intelligence Layer for AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Founding Team", email = "princeruhulofficial@gmail.com" }
]
keywords = ["emotion", "ai", "llm", "empathy", "conversation", "intelligence", "mcp", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
mcp = [
    "mcp>=1.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
redis = [
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/princeruhulofficial/human-emotion-intelligence"
Repository = "https://github.com/princeruhulofficial/human-emotion-intelligence"

[project.scripts]
hei-mcp = "hei.mcp_server:main"
hei-api = "hei.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hei"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
